force-app/main/default/objects/Vacation__c/Vacation__c.object-meta.xml
<CustomObject>
    <label>Out of Office</label>
    <nameField>
        <label>Out of Office Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Out of Office</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>