force-app/main/default/objects/Vacation__c/fields/Backup_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Backup_Resource_Name__c</fullName>
    <label>Backup Resource Name</label>
    <type>TextArea</type>
</CustomField>