force-app/main/default/objects/Vacation__c/fields/Current_month__c.field-meta.xml
<CustomField>
    <fullName>Current_month__c</fullName>
    <formula>MONTH( TODAY() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>