force-app/main/default/objects/Vacation__c/fields/Dates_of_vacaton__c.field-meta.xml
<CustomField>
    <fullName>Dates_of_vacaton__c</fullName>
    <label>Dates of vacaton</label>
    <type>TextArea</type>
</CustomField>