force-app/main/default/objects/Vacation__c/fields/Details_of_work_Performed__c.field-meta.xml
<CustomField>
    <fullName>Details_of_work_Performed__c</fullName>
    <label>Details of work Performed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>