force-app/main/default/objects/Vacation__c/fields/End_Date_of_Week_End__c.field-meta.xml
<CustomField>
    <fullName>End_Date_of_Week_End__c</fullName>
    <formula>DATE(
YEAR(  End_Date__c  ),
Month(End_Date__c),
DAY(End_Date__c)-MOD(End_Date__c - DATE(1900, 1, 1), 7))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date of Week_End_Date</label>
    <type>Date</type>
</CustomField>