force-app/main/default/objects/Vacation__c/fields/Floating_Holidays__c.field-meta.xml
<CustomField>
    <fullName>Floating_Holidays__c</fullName>
    <label>Floating Holidays</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pongal January 14</fullName>
            </value>
            <value>
                <fullName>Guru Gobind Singh&#39;s Birthday January 18</fullName>
            </value>
            <value>
                <fullName>Thiruvalluvar Day January 15</fullName>
            </value>
            <value>
                <fullName>Uzhavar Thirunal January 16</fullName>
            </value>
            <value>
                <fullName>ID-E-Milad January 25</fullName>
            </value>
            <value>
                <fullName>Basant Panchami February 15</fullName>
            </value>
            <value>
                <fullName>Next day of MahasivarathriMarch 11</fullName>
            </value>
            <value>
                <fullName>Holika Dahan March 26</fullName>
            </value>
            <value>
                <fullName>Holi March 27</fullName>
            </value>
            <value>
                <fullName>Good Friday March 29</fullName>
            </value>
            <value>
                <fullName>Chandramana Ugadi April 11</fullName>
            </value>
            <value>
                <fullName>Bengali New Year Day April 15</fullName>
            </value>
            <value>
                <fullName>Ram Navami April 19</fullName>
            </value>
            <value>
                <fullName>Mahavir Jayanti April 24</fullName>
            </value>
            <value>
                <fullName>Shab-E-Meraj June 07</fullName>
            </value>
            <value>
                <fullName>Shab-E-Barath June 25</fullName>
            </value>
            <value>
                <fullName>Jamat -Ul- Vida August 02</fullName>
            </value>
            <value>
                <fullName>Shab-E-Qadar August 05</fullName>
            </value>
            <value>
                <fullName>Varalakshmi Vratham August 16</fullName>
            </value>
            <value>
                <fullName>Raksha Bandan August 20</fullName>
            </value>
            <value>
                <fullName>Janmashtami August 28</fullName>
            </value>
            <value>
                <fullName>Ganesh Chaturthi September 09</fullName>
            </value>
            <value>
                <fullName>Onam September 16</fullName>
            </value>
            <value>
                <fullName>Mahalaya Amavasya October 04</fullName>
            </value>
            <value>
                <fullName>Durga Puja: Saptami October 11</fullName>
            </value>
            <value>
                <fullName>Bakrid October 16</fullName>
            </value>
            <value>
                <fullName>Karva Chouth October 22</fullName>
            </value>
            <value>
                <fullName>Balipadyami November 04</fullName>
            </value>
            <value>
                <fullName>Bhai Dhuj November 05</fullName>
            </value>
            <value>
                <fullName>Chhat Puja November 08</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>