force-app/main/default/objects/Vacation__c/fields/Hours_Of_Vacation__c.field-meta.xml
<CustomField>
    <fullName>Hours_Of_Vacation__c</fullName>
    <formula>Hours_Of_Vacation_month_1__c  +  Hours_Of_Vacation_month_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Of Vacation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>