force-app/main/default/objects/Vacation__c/fields/Hours_Of_Vacation_month_1__c.field-meta.xml
<CustomField>
    <fullName>Hours_Of_Vacation_month_1__c</fullName>
    <label>Hours Of Vacation month 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>