force-app/main/default/objects/Vacation__c/fields/IsAllDayEvent__c.field-meta.xml
<CustomField>
    <fullName>IsAllDayEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAllDayEvent</label>
    <type>Checkbox</type>
</CustomField>