force-app/main/default/objects/Vacation__c/fields/Month_of_End__c.field-meta.xml
<CustomField>
    <fullName>Month_of_End__c</fullName>
    <formula>MONTH( End_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month of End</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>