force-app/main/default/objects/Vacation__c/fields/MonthNumber__c.field-meta.xml
<CustomField>
    <fullName>MonthNumber__c</fullName>
    <label>MonthNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>