force-app/main/default/objects/Vacation__c/fields/No_of_Vacation_Days__c.field-meta.xml
<CustomField>
    <fullName>No_of_Vacation_Days__c</fullName>
    <label>No.of Vacation Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>