force-app/main/default/objects/Vacation__c/fields/Same_Month__c.field-meta.xml
<CustomField>
    <fullName>Same_Month__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same Month</label>
    <type>Checkbox</type>
</CustomField>