force-app/main/default/objects/Vacation__c/fields/Same_Year__c.field-meta.xml
<CustomField>
    <fullName>Same_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same Year</label>
    <type>Checkbox</type>
</CustomField>