force-app/main/default/objects/Vacation__c/fields/Select_Status__c.field-meta.xml
<CustomField>
    <fullName>Select_Status__c</fullName>
    <label>Select Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Past Vacations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>