force-app/main/default/objects/Vacation__c/fields/Start_Date_of_Week_strt__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_of_Week_strt__c</fullName>
    <formula>DATE(
    YEAR( Start_Date__c ),
    Month(Start_Date__c),
    DAY(Start_Date__c)-MOD(Start_Date__c - DATE(1900, 1, 1), 7))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date of Week_start_Date</label>
    <type>Date</type>
</CustomField>