force-app/main/default/objects/Vacation__c/fields/team_lead_name__c.field-meta.xml
<CustomField>
    <fullName>team_lead_name__c</fullName>
    <formula>Contact__r.Team_Lead_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>team lead name</label>
    <type>Text</type>
</CustomField>