force-app/main/default/objects/Vacation__c/fields/Type_of_Leave__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Leave__c</fullName>
    <label>Type of Leave</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SickLeave</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Planned Vacation</fullName>
            </value>
            <value>
                <fullName>Floating</fullName>
            </value>
            <value>
                <fullName>Compensatory Off</fullName>
            </value>
            <value>
                <fullName>Emergency / Unplanned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>