force-app/main/default/objects/Vacation__c/fields/Vacation_Applied_On__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Applied_On__c</fullName>
    <formula>DATEVALUE(Dates_of_vacaton__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vacation Applied On</label>
    <type>Date</type>
</CustomField>