force-app/main/default/objects/Vacation__c/fields/Vocation_Hours__c.field-meta.xml
<CustomField>
    <fullName>Vocation_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Vocation Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>