force-app/main/default/objects/Vacation__c/fields/Weekly_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Start_Date__c</fullName>
    <label>Weekly Start Date</label>
    <type>Date</type>
</CustomField>