force-app/main/default/objects/Vacation__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <formula>YEAR( Start_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year of start</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>