force-app/main/default/objects/Vacation__c/fields/Year_of_End__c.field-meta.xml
<CustomField>
    <fullName>Year_of_End__c</fullName>
    <formula>YEAR( End_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year of End</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>