force-app/main/default/objects/Vacation__c/validationRules/Vacation_End_Date_Greater_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Vacation_End_Date_Greater_Start</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End date should be greater than of Start Date</errorMessage>
</ValidationRule>